# itacademy

./: README.md
hw2/sdl_dynamic/: CMakeLists.txt  main.cxx
hw2/sdl_static/: CMakeLists.txt  main.cxx
